# youtuber

./: .gitignore  README.md
.github/workflows/: build-macos.yml  build-windows.yml  release.yml
backend/: pyproject.toml  requirements.txt  youtuber-backend.spec
backend/src/: config.py  main.py
backend/src/api/: download.py  health.py  playlist.py  router.py  settings.py  video.py  ws.py
backend/src/core/: download_mgr.py  progress.py  url_detector.py  ytdl_wrapper.py
backend/src/models/: download.py  playlist.py  settings.py  video.py
backend/tests/: conftest.py
backend/tests/test_api/: test_download.py  test_health.py  test_playlist.py  test_settings.py  test_video.py  test_ws.py
backend/tests/test_core/: test_download_mgr.py  test_progress.py  test_url_detector.py  test_ytdl_wrapper.py
backend/tests/test_models/: test_download.py  test_playlist.py  test_settings.py  test_video.py
docs/superpowers/plans/: 2026-06-17-backend-core.md  2026-06-17-cicd-packaging.md  2026-06-17-electron-python-bridge.md  2026-06-17-frontend-electron-vue3.md  2026-06-18-download-buttons-and-search.md
docs/superpowers/specs/: 2026-06-18-download-buttons-and-search-design.md
electron/: electron-builder.yml  package-lock.json  package.json
electron/src/main/: api-proxy.ts  index.ts  ipc-handlers.ts  logger.ts  preload.ts  python-manager.ts
electron/src/renderer/: electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
openspec/changes/youtube-downloader-app/: design.md  tasks.md  (+1 more)
scripts/: build-backend.py
(+45 files in other folders)
